--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@ main {
 .header {
     display: flex;
     align-items: center;
+    justify-content: center;
     height: 65px;
     background: linear-gradient(90deg, #672280 1.18%, #A626D3 100%);
     color: white;
@@ -24,12 +25,11 @@ main {
 
 .header > img {
     height: 100%;
-    margin-right: 6px;
+    margin-right: 1em;
 }
 
 .header > h1 {
-    font-size: 1.25rem;
-    margin-right: auto;
+    font-size: 2rem;
 }
 
 .form {
